syntax = "proto3";

package eidos.matching.v1;

option go_package = "github.com/eidos-exchange/eidos/gen/matching/v1;matchingv1";

import "common/enums.proto";

// 撮合引擎服务
service MatchingService {
    // 获取订单簿快照
    rpc GetOrderbook(GetOrderbookRequest) returns (GetOrderbookResponse);

    // 获取订单簿深度
    rpc GetDepth(GetDepthRequest) returns (GetDepthResponse);

    // 健康检查
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GetOrderbookRequest {
    string market = 1;
    int32 limit = 2;  // 每边数量限制，默认 100
}

message GetOrderbookResponse {
    string market = 1;
    repeated PriceLevel bids = 2;
    repeated PriceLevel asks = 3;
    int64 timestamp = 4;
    uint64 sequence = 5;
}

message GetDepthRequest {
    string market = 1;
    int32 level = 2;  // 5, 10, 20, 50, 100
}

message GetDepthResponse {
    string market = 1;
    repeated PriceLevel bids = 2;
    repeated PriceLevel asks = 3;
    int64 timestamp = 4;
}

message PriceLevel {
    string price = 1;
    string amount = 2;
    int32 order_count = 3;  // 该价位订单数量
}

message HealthCheckRequest {}

message HealthCheckResponse {
    bool healthy = 1;
    map<string, MarketStatus> markets = 2;
}

message MarketStatus {
    string market = 1;
    bool active = 2;
    int64 bid_count = 3;
    int64 ask_count = 4;
    string best_bid = 5;
    string best_ask = 6;
    int64 last_match_time = 7;
}

// === Kafka 消息定义 ===

// 订单消息 (Kafka: orders)
message OrderMessage {
    string order_id = 1;
    string wallet = 2;
    string market = 3;
    eidos.common.v1.OrderSide side = 4;
    eidos.common.v1.OrderType order_type = 5;
    string price = 6;
    string amount = 7;
    eidos.common.v1.TimeInForce time_in_force = 8;
    int64 created_at = 9;
}

// 取消请求消息 (Kafka: cancel-requests)
message CancelRequestMessage {
    string order_id = 1;
    string market = 2;
    string wallet = 3;
    int64 requested_at = 4;
}

// 成交结果消息 (Kafka: trade-results)
message TradeResultMessage {
    string trade_id = 1;
    string market = 2;
    string maker_order_id = 3;
    string taker_order_id = 4;
    string maker_wallet = 5;
    string taker_wallet = 6;
    eidos.common.v1.OrderSide taker_side = 7;
    string price = 8;
    string amount = 9;
    string quote_amount = 10;
    string maker_fee = 11;
    string taker_fee = 12;
    int64 matched_at = 13;
}

// 订单簿更新消息 (Kafka: orderbook-updates)
message OrderbookUpdateMessage {
    string market = 1;
    uint64 sequence = 2;
    repeated PriceLevelUpdate bids = 3;
    repeated PriceLevelUpdate asks = 4;
    int64 timestamp = 5;
}

message PriceLevelUpdate {
    string price = 1;
    string amount = 2;  // 0 表示删除该价位
}

// 订单取消确认消息 (Kafka: order-cancelled)
message OrderCancelledMessage {
    string order_id = 1;
    string market = 2;
    string wallet = 3;
    string remaining_amount = 4;
    int64 cancelled_at = 5;
}
